Closed Bug 11845 Opened 26 years ago Closed 26 years ago

[dogfood] [key]Cannot switch keyboard layout. cannot type international characters

Categories

(Core :: Internationalization, defect, P1)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: ftang, Assigned: ftang)

References

Details

(Whiteboard: [PDT+]fix check into keyEvent branch. Need to land to tip)

Reproduce procedure- 1. install new keyboard layout by using "Keyboard" control panel 2. a keyboard menu will appeared in the right bottom corner of the screen in Win95/98/NT 3. Launch AppRunner. 4. Switch keyboard to another one under browser or editro 5. AppRunner does not allow you to switch. We need this to support multilingual input.
Assignee: tague → ftang
Summary: Cannot switch keyboard layout → Cannot switch keyboard layout
Frank :- i can't reproduce this on NT using german, english or Japanese. Can you provide me more information about your system and what keyboards you were trying to use. I'll take a look at it once I get that information.
QA Contact: teruko → blee
Changed QA Contact to blee@netscape.com since he tested this before.
Assignee: ftang → tague
It happened in my downloaded rel build. I can switch in my debug build but then the input is wrong. Please try it again and mark it WORKFORME if both debug and rel build are ok.
Target Milestone: M11
setting milestone to m11, since it is "only" appearing in release builds.
Status: NEW → ASSIGNED
Assignee: tague → ftang
Status: ASSIGNED → NEW
reassign this to ftang. Tague is doomed.
Status: NEW → ASSIGNED
Target Milestone: M12 → M11
maybe dup of 14058. Mark it as M11 assign for now. Add rods/tague/buster to the cc list.
*** Bug 14058 has been marked as a duplicate of this bug. ***
more info cut&paste from mail send to tague 9/11 Now you are using ACP as the initial value for the keyboard input CP. As I mention eariler, you should use another value for the init value. Here is more info Call GetKeyboardLayout ( 0 ). It will return a HKL to you. The lower word of HKL is a Language Identifiers You know the rest, you alrady hae the Language identifier to CP conversion in the WM_INPUTLANGUAGE sectoin of nsWindow::ProcessMessage in mozilla/widget/src/window/nsWindow.cpp
The cut&paste lost HREF HREF for GetKeyboardLayout - http://msdn.microsoft.com/library/sdkdoc/winui/keybinpt_5sxg.htm HREF for Language identifier - http://msdn.microsoft.com/library/sdkdoc/winbase/nls_8xo3.htm
I put in some tracing code and find out 1. all the nsWindow are init with mCurrentKeyboardCP == 0 (which is wrong and should be 932 on my Japanese NT). The reason it is wrong is because we simply set the mCurrentKeyboardCP to CP_ACP in the nsWindow::nsWindow. We should use the GetKeyboardLayout code there find out the correct keyboard CP 2. the window which got the WM_INPUTLANGREQUEST/WM_INPUTLANGCHANGE are not the same one which got the nsWindow::onChar. Could be a foucs or event propogation issue.
QA Contact: blee → teruko
Blocks: 15693
Whiteboard: fixed in local tree. Fixed will be first check into the keyevent branch then land to the tip
Priority: P3 → P1
Summary: Cannot switch keyboard layout → [key]Cannot switch keyboard layout
Whiteboard: fixed in local tree. Fixed will be first check into the keyevent branch then land to the tip → fix check into keyEvent branch. Need to land to tip
Summary: [key]Cannot switch keyboard layout → [d[gfood] [key]Cannot switch keyboard layout. cannot type international characters
Summary: [d[gfood] [key]Cannot switch keyboard layout. cannot type international characters → [dogfood] [key]Cannot switch keyboard layout. cannot type international characters
Whiteboard: fix check into keyEvent branch. Need to land to tip → [PDT+]fix check into keyEvent branch. Need to land to tip
Putting on [PDT+] radar.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
fix in keyEvent_19991004_BRANCH landing
Status: RESOLVED → VERIFIED
I tested this in 10-15-08 Win32 build. It works fine. I tested Dutch, German, French, Iceland, Swedish, Spanish, and Portugues. I mark this as verified.
Status: VERIFIED → REOPENED
I tested this in 10-20-08 Win32 build. In the URL bar and forms, I cannot type the accended characters. I tested French keyboard. Same as 14387 and 14388.
Resolution: FIXED → ---
Status: REOPENED → RESOLVED
Closed: 26 years ago26 years ago
Resolution: --- → FIXED
The problem I found was not Keyboard switching problem. It was rendering problem. I logged the different bug about it to 16986. I will mark this as fixed.
Status: RESOLVED → VERIFIED
I verified this in 10-20-08 build.
You need to log in before you can comment on or make changes to this bug.