Land the following to the branch. r=tague

This fix is for bug 11845 and 15657. It may also fix 10901 and 6053 but I
have not test that two yet.


a. I add my own version of NS_IsDBCSLeadByte which take a CP as input
argument. We need to use this to replace IsDBCSLeadByte which always
assume CP_ACP. In the case of deal with keyboard input data, since user
could switch keyboard layout to a layout which not in the ACP, we need this
function. I use the range which spec out in
ftp://ftp.unicode.org/Public/MAPINGS/VENDORS/MICSFT/WINDOWS/CP9*.TXT

b. I move the LANG ID to CP conversion code from the
MW_INPUTLANGCHANGE to form a function LangIDToCP. The function
will convert the LANG ID to a CP (Code Page). It will return PR_TRUE if
the conversion success. I change it so it will try to use buffer on the stack if
possible to improve the performance.

c. I change the nsWindow constructor code to call GetKeyboardLayout and
then call LangIDToCP to set the init value of mCurrentKeyboardCP. The
details of why we need to call GetKeyboardLayout is document in the bug
reports. (11845/15657)
d. I change the MW_CHAR code so it use the NS_IsDBCSLeadByte instead
of IsDBCSLeadByte so it will work correctly if the mCurrentKeyboardCP !=
ACP (for example, using French/German/US-Intl/Greek/Russian on a
Japanese/Korean/Chinese system)
e. in WM_INPUTLANGCHANGE, (1) I call LangIDToCP to do the Lang
ID to CP conversion, (2) ProcessMessage will always return FALSE so we
will post this message to all the child window (see the MSDN for details, see
the bug report for the link) (3) reset mHaveDBCSLeadByte to reset the state.